<?xml version="1.0"?>
<package format="3">
    <name>ros_commons</name>
    <version>0.1.0</version>
    <description>Common utilities for rosbot3_simulation.</description>
    <maintainer email="vito.franzosi@gmail.com">Vito Rodrigues Franzosi</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>nav2_map_server</exec_depend>
</package>